--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv='refresh' content='0; URL=http://example.com/'>
+    <meta http-equiv='refresh' content='0; URL=https://edwin-torres.github.io/github-page'>
     <script type="text/javascript">
-        window.location.href = "http://example.com"
+        window.location.href = "https://edwin-torres.github.io/github-page"
     </script>
     <title>Document</title>
 </head>
