--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
      
 
-    <title>MathTutor</title>
+    <title>Edwin</title>
     
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,700,900|Ubuntu:400,500,700&display=swap" rel="stylesheet">
